Updated landing page header img to stop page jumping

--- a/css/custom.css
+++ b/css/custom.css
@@ -210,6 +210,7 @@ transform: translateY(2px);
 .landing-head {
   background: url('../img/LandingPage_Pos.png') 50% 0% no-repeat;
 	background-size: cover;
+	background-attachment: fixed;
   color: white;
   padding-bottom: 25%;
 }
